Another important step to have a working version of DVMS scala with SimGrid (Jonathan's work)

--- a/config/simulator.properties
+++ b/config/simulator.properties
@@ -31,7 +31,7 @@ simulator.crashperiod = 2678400
 // The algorithm that should be simulated
 // default: entropy 
 // cf. Main.java
-simulator.algorithm = entropy
+simulator.algorithm = dvms
 
 
 // The number of values (-1) the cpu consumption of a VM can take.
