--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,7 @@ Icon
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
+
+# Ignore several files
+config/generated_deploy.xml
+simu.trace
